fixed video alignment on mobile

--- a/src/styles/music.css
+++ b/src/styles/music.css
@@ -50,10 +50,17 @@ iframe {
 
 @media only screen and (max-width: 900px) {
     .video {
-        width: 90%;
+        width: 100%;
         padding: 5px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .video p {
+        text-align: center;
     }
 
     iframe {
